manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks
        # env:
        #   - name: CONNECTION_STRING
        #     value: "Driver={ODBC Driver 17 for SQL Server};Server=tcp:devopsinsiderssrv.database.windows.net,1433;Database=todoapp;Uid=devopsadmin;Pwd=P@ssw01rd@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"                                          
        image: todoazureacr1.azurecr.io/gettasks:v1
        ports:
        - containerPort: 8000
