manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-tasks
  namespace: default 
spec:
  type: LoadBalancer
  selector:
    app: get-tasks
  ports:
    - port: 80
      targetPort: 8000
