manifests/ingress(AGIC).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-tasks-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: get-tasks.ak4t7.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-tasks
            port: 
              number: 80
